--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?
-family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&
-family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-rel="stylesheet"
-/>
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Sans:wght@100..900&display=swap" rel="stylesheet">
+
   <title>Coffee Shop</title>
-  <meta name="author" content="Nyla Foster"/>
-  <link rel="stylesheet" href="./pages/index.css">
+  <meta name="author" content="Nyla Foster" />
+  <meta name="description" content="Welcome to Triple Peaks Library Cafe.">
+  <meta name="keywords" content="coffee, shop, recipes, menu, reservations, cafe, drinks">
+
   <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
